add color to row when mapped

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -394,3 +394,8 @@ div[data-component='drop'] {
   height: 0;
   width: 0;
 }
+
+.mapped {
+  background-color: green !important;
+  color: white;
+}
