--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -31,6 +31,16 @@ div[data-component='tablerenderer'] {
     background-color: inherit;
   }
 
+  .selected-row {
+    background-color: #b2b2b2 !important;
+  }
+
+  td:hover {
+    button[data-component='editor'] {
+      display: block;
+    }
+  }
+
   div[data-component='filter'] {
     display: flex;
     align-items: center;
@@ -49,11 +59,10 @@ div[data-component='tablerenderer'] {
 
     button {
       position: relative;
-      width: 0;
-      padding: 0;
+      width: max-content;
+      padding: 0 0 0 0.5rem;
       display: flex;
       align-items: center;
-      right: 2rem;
       top: -0.25rem;
       border: none;
       background-color: inherit;
@@ -398,4 +407,17 @@ div[data-component='drop'] {
 .mapped {
   background-color: green !important;
   color: white;
+}
+
+div[data-component='cell-container'] {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: none;
+  }
 }
