--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -376,6 +376,7 @@ section[data-component='table-pop-up'] {
   div[data-component='table-head'] {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     h2 {
       font-size: 1.5rem;
@@ -385,7 +386,6 @@ section[data-component='table-pop-up'] {
 
     div[data-component='equivalence'] {
       height: min-content;
-      padding: 2.5rem;
 
       select {
         padding: 0.5rem 1rem;
