--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -142,7 +142,7 @@ div[data-component='tablerenderer'] {
   }
 }
 
-section[data-component='smallmodal-container'] {
+section[data-component='modal-container-small'] {
   width: 100%;
   height: 100%;
   display: flex;
@@ -155,57 +155,54 @@ section[data-component='smallmodal-container'] {
   z-index: 100;
   filter: drop-shadow(12, 12, 10, rgba(0, 0, 0, 1));
 
-  div[data-component='smallmodal'] {
+  div[data-component='modal'] {
     width: 20%;
     height: 20%;
     background-color: white;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 
-    label {
-      font-weight: 600;
-      padding: 0.5rem 0 1rem 0;
-    }
-
-    input {
-      margin: 0 0 1rem 0;
-      padding: 0.5rem 1rem;
-      border: 1px solid #999999;
-      border-radius: 5px;
-    }
-
-    div[data-component='button-container'] {
-      width: 80%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-
-      button {
-        padding: 0.5rem 1rem;
-        border: 1px solid #999999;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-
-      button[data-component='button-cancel'] {
-        background-color: red;
-        color: white;
-        border: 1px solid lightcoral;
-      }
-
-      button[data-component='button-save'] {
-        background-color: green;
-        color: white;
-        border: 1px solid darkgreen;
-      }
+    button[data-component='close'] {
+      padding: 1rem 0 0 1rem;
+      border: none;
+      background-color: inherit;
+      cursor: pointer;
+      position: absolute;
+      right: 41vw;
     }
   }
 }
 
-section[data-component='modal-container'] {
+section[data-component='modal-container-medium'] {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+  filter: drop-shadow(12, 12, 10, rgba(0, 0, 0, 1));
+
+  div[data-component='modal'] {
+    width: 60%;
+    height: 60%;
+    background-color: white;
+    border-radius: 10px;
+
+    button[data-component='close'] {
+      padding: 1rem 0 0 1rem;
+      border: none;
+      background-color: inherit;
+      cursor: pointer;
+      position: absolute;
+      right: 21vw;
+    }
+  }
+}
+
+section[data-component='modal-container-large'] {
   width: 100%;
   height: 100%;
   display: flex;
