--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -140,7 +140,7 @@ div[data-component='tablerenderer'] {
 
     p[data-component='column-name'] {
       font-weight: 800;
-      font-size: 1rem;
+      font-size: 12px;
     }
   }
 }
