feat: apply & delete & save filters for Athena

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -266,7 +266,7 @@ div[data-component='modal-content'] {
       display: flex;
       flex-direction: column;
 
-      button {
+      button[data-component='filter-button'] {
         width: 100%;
         display: flex;
         align-items: center;
