visualisation of already mapped rows

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -374,9 +374,9 @@ section[data-component='table-pop-up'] {
   max-width: 75%;
 
   div[data-component='table-head'] {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    // display: flex;
+    // justify-content: space-between;
+    // align-items: center;
 
     h2 {
       font-size: 1.5rem;
