--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -1,210 +1,3 @@
-div[data-component='RADar-DataTable'] {
-  div[data-name='table-container'] {
-    resize: vertical;
-    overflow-x: auto;
-    /*overflow: hidden;*/
-
-    table {
-      border-collapse: collapse;
-      /*margin-left: 1px;
-          width: 100%;
-          table-layout: fixed;*/
-      line-height: 12px;
-      display: table;
-      box-sizing: border-box;
-
-      thead {
-        border-bottom: 1px solid;
-        border-left: 1px solid black;
-        border-right: 1px solid black;
-        background-color: #e3e3e3;
-
-        tr[data-name='titles'] {
-          th {
-          }
-        }
-
-        tr[data-name='filters'] {
-          th {
-          }
-        }
-
-        tr {
-          border-bottom: 1px solid black;
-          padding: 0.35em;
-          font-size: 12px;
-
-          th {
-            width: fit-content;
-            display: table-cell;
-            box-sizing: content-box;
-            border: 1px solid black;
-            /*min-width: 50px;*/
-
-            div[data-name='column-reposition'] {
-              display: flex;
-
-              :first-child {
-                flex: 1 1 auto;
-              }
-
-              p {
-                width: fit-content;
-              }
-
-              button {
-                cursor: pointer;
-                min-width: 16px;
-              }
-            }
-
-            div[data-name='column-reposition'] {
-              display: flex;
-
-              :first-child {
-                flex: 1 1 auto;
-              }
-
-              button {
-                cursor: pointer;
-              }
-            }
-
-            div[data-name='column-resize'] {
-              display: flex;
-
-              div[data-name='column-resize-right'] {
-                flex: 0 0 auto;
-                width: 2px;
-                cursor: col-resize;
-              }
-
-              div[data-name='column-reposition'] {
-                flex: 1 1 auto;
-              }
-
-              div[data-name='column-resize-left'] {
-                flex: 0 0 auto;
-                width: 2px;
-                cursor: col-resize;
-              }
-            }
-          }
-        }
-
-        input {
-          border-radius: 2px;
-          font-size: 0.75rem;
-          box-shadow: inset 0 0.0625 0.125em rgba(10, 10, 10, 0.05);
-          background-color: #fff;
-          border-color: #dbdbdb;
-          color: #363636;
-          height: 2.5em;
-          display: inline-flex;
-          border: 1px solid;
-          justify-content: flex-start;
-          height: 25px;
-        }
-
-        button {
-          cursor: pointer;
-          background-color: #fff;
-          border-radius: 2px;
-          border-color: #dbdbdb;
-          border-width: 1px;
-          justify-content: center;
-          padding-left: 1em;
-          text-align: center;
-          white-space: nowrap;
-          font-size: 0.75em;
-        }
-      }
-
-      tfoot {
-        tr[data-name='pagination'] {
-          th {
-            div {
-              display: flex;
-
-              div[data-name='pagination-container'] {
-                margin-left: 5px;
-              }
-
-              div[data-name='pagination-container-pages'] {
-                margin-left: auto;
-              }
-            }
-          }
-        }
-
-        tr:last-child {
-          border: none;
-        }
-
-        select {
-          cursor: pointer;
-          display: inline-block;
-          font-size: 1em;
-          max-width: 100%;
-          outline: 0;
-          height: 25px;
-          align-self: center;
-        }
-      }
-
-      tbody {
-        border-left: 1px solid black;
-        border-right: 1px solid black;
-
-        tr {
-          border-bottom: 1px solid black;
-
-          td {
-            width: fit-content;
-            /*min-width: 50px;*/
-          }
-        }
-
-        tr:nth-child(even) {
-          background: #fff;
-        }
-
-        tr:nth-child(odd) {
-          background: #e2e8f3;
-        }
-      }
-    }
-  }
-
-  div[data-name='pagination-container'] {
-    float: left;
-    clear: both;
-  }
-
-  div[data-name='pagination-container-pages'] {
-    float: right;
-    text-align: right;
-    height: 30px;
-    margin-top: 5px;
-    padding: 0;
-
-    button {
-      &:not([data-active='true']):hover:enabled {
-        background-color: #333;
-        color: #fff;
-      }
-
-      &[data-active='true'] {
-        color: #333;
-        background: linear-gradient(to bottom, #d3dcee 5%, #7b96cc 60%);
-      }
-
-      &:disabled {
-      }
-    }
-  }
-}
-
 section[data-component='modal-container-large'] {
   width: 100%;
   height: 100%;
@@ -429,6 +222,11 @@ section[data-name='author'] {
 div[data-name='athena-layout'] {
   display: flex;
   width: 100%;
+  height: 90vh;
+
+  section[data-name='filters-container-small'] {
+    display: none;
+  }
 
   section[data-name='filters-container'] {
     min-width: 16.66%;
@@ -468,53 +266,53 @@ div[data-name='athena-layout'] {
           display: flex;
           flex-direction: column;
           max-height: 250px;
-  
-          div[data-component='filter-input'] {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
-              padding-bottom: 0.5rem;
-              width: 100%;
-              margin-top: 1rem;
-  
-              input {
-                  border-radius: 5px;
-                  padding-left: 1rem;
-                  max-width: 80%;
-                  min-width: 50%;
-                  margin-left: 0.5rem;
-              }
-  
-              button {
-                border: none;
-                  padding: 0.5rem;
-                  background-color: inherit;
-                  margin-right: 0.5rem;
-                  box-shadow: 0;
-                  filter: none;
-              }
-          }
-  
-          div[data-component='filter-option'] {
-              display: flex;
-              align-items: center;
-              width: 80%;
-              margin: auto;
-              gap: 1rem;
-  
-              input {
-                  width: 10%;
-              }
-  
-              p {
-                  max-width: 80%;
-              }
 
-              button {
-                border: none;
-              }
+          div[data-component='filter-input'] {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-bottom: 0.5rem;
+            width: 100%;
+            margin-top: 1rem;
+
+            input {
+              border-radius: 5px;
+              padding-left: 1rem;
+              max-width: 80%;
+              min-width: 50%;
+              margin-left: 0.5rem;
+            }
+
+            button {
+              border: none;
+              padding: 0.5rem;
+              background-color: inherit;
+              margin-right: 0.5rem;
+              box-shadow: 0;
+              filter: none;
+            }
           }
-      }
+
+          div[data-component='filter-option'] {
+            display: flex;
+            align-items: center;
+            width: 80%;
+            margin: auto;
+            gap: 1rem;
+
+            input {
+              width: 10%;
+            }
+
+            p {
+              max-width: 80%;
+            }
+
+            button {
+              border: none;
+            }
+          }
+        }
       }
 
       .scroll {
@@ -529,15 +327,18 @@ div[data-name='athena-layout'] {
 
   section[data-name='table-pop-up'] {
     width: 100%;
+    height: 90%;
 
     div[data-name='table-head'] {
+      width: 80%;
+      max-height: 45%;
 
-      div[data-name='top'] {
+      div[data-name='top-large'] {
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 1rem;
-        width: 95%;
+        width: 100%;
 
         h2 {
           font-size: 24px;
@@ -547,11 +348,10 @@ div[data-name='athena-layout'] {
         div[data-name='currentRow'] {
           display: flex;
           gap: 1rem;
-          
+
           button {
             border: 1px solid lightgray;
             border-radius: 5px;
-
           }
         }
 
@@ -583,20 +383,35 @@ div[data-name='athena-layout'] {
         }
       }
 
-      div[data-name='bottom'] {
+      div[data-name='top-small'] {
+        display: none;
+      }
+
+      div[data-name='bottom-large'] {
         display: flex;
         width: 95%;
         justify-content: center;
         margin-bottom: 1rem;
 
         table {
-
-          th, td {
+          th,
+          td {
             padding: 0.5rem 1rem;
             border: 1px solid lightgray;
           }
         }
       }
+
+      div[data-name='bottom-small'] {
+        display: none;
+      }
+    }
+
+    div[data-component='table'] {
+      padding: 0 0 0 1rem;
+      width: 80%;
+      max-height: 65%;
+      overflow-y: auto;
     }
   }
 }
@@ -610,6 +425,12 @@ button[data-name='header-button'] {
   margin-right: 1rem;
 }
 
+div[data-name='header-buttons-container'] {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
 .actions {
   display: flex;
   align-items: center;
@@ -619,14 +440,29 @@ button[data-name='header-button'] {
   background-color: greenyellow;
 }
 
-section[data-name="header"] {
+section[data-name='header'] {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 2rem 1rem;
 }
 
-div[data-name="logger"] {
+section[data-name='header-small'] {
+  display: none;
+}
+
+div[data-name='logger-seperate'] {
+  display: none;
+}
+
+div[data-name='table-options'] {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+div[data-name='logger'] {
   display: flex;
   justify-content: space-between;
   padding: 0.5rem 1rem;
@@ -636,7 +472,7 @@ div[data-name="logger"] {
   max-width: 40vw;
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.1);
 
-  div[data-name="logger-content"] {
+  div[data-name='logger-content'] {
     h2 {
       font-weight: 700;
       padding-bottom: 0.5rem;
@@ -654,4 +490,399 @@ div[data-name="logger"] {
   button:hover {
     color: red;
   }
+}
+
+div[data-name='logger-seperate'] {
+    display: none;
+  }
+
+@media only screen and (max-width: 600px) {
+  section[data-component='modal-container-large'],
+  section[data-component='modal-container-medium'] {
+    div[data-component='modal'] {
+      button[data-component='close'] {
+        margin: 0 0.5rem;
+      }
+    }
+  }
+
+  section[data-component='modal-container-small'] {
+    div[data-component='modal'] {
+      width: 40%;
+      height: 30%;
+
+      h2 {
+        padding-top: 1.5rem;
+        font-size: 16px;
+      }
+
+      button[data-component='close'] {
+        right: 31vw;
+        margin: 0.5rem 0.5rem;
+        padding: 0;
+      }
+
+      div[data-component='modal-content'] {
+        padding: 5px;
+      }
+    }
+  }
+
+  section[data-name='settings'] {
+    h2 {
+      font-size: 20px;
+    }
+
+    div[data-name='options'] {
+      padding: 1rem;
+      max-height: 40vh;
+      overflow-y: auto;
+
+      div[data-name='option'] {
+        gap: 1rem;
+        justify-content: space-between;
+        margin-bottom: 0.5rem;
+
+        p {
+          font-size: 16px;
+        }
+      }
+
+      div[data-name='switch'] {
+        label {
+          top: -15px;
+          width: 40px;
+          height: 20px;
+          border-radius: 13.33px;
+        }
+
+        label:after {
+          top: 2.66px;
+          left: 2.66px;
+          width: 14.66px;
+          height: 14.66px;
+          border-radius: 13.33px;
+          transition: 0.3s;
+        }
+      }
+
+      select {
+        width: 53.66px;
+        height: 26.66px;
+        font-size: 0.75rem;
+        padding: 0 0.25rem 0;
+      }
+    }
+  }
+
+  section[data-name='author'] {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h2 {
+      font-size: 20px;
+      padding: 1rem 0 0.5rem 0;
+    }
+
+    input {
+      width: 80%;
+    }
+
+    div[data-name='buttons-container'] {
+      width: 100%;
+
+      button {
+        padding: 0.375rem 0.75rem;
+        font-size: 12px;
+      }
+    }
+  }
+
+  div[data-name='athena-layout'] {
+    section[data-name='filters-container-small'] {
+      display: block;
+      position: absolute;
+
+      button {
+        background-color: inherit;
+        border: none;
+        padding: 0.8rem;
+
+        svg {
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
+
+    section[data-name='filters-container'] {
+      display: none;
+    }
+
+    section[data-name='table-pop-up'] {
+      width: 100%;
+      height: 90%;
+
+      div[data-name='table-head'] {
+        width: 100%;
+        max-height: 45%;
+
+        div[data-name='top-large'] {
+          display: none;
+        }
+
+        div[data-name='top-small'] {
+          display: block;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin: 2rem 0.25rem 1rem 0.25rem;
+
+          p,
+          select,
+          option {
+            font-size: 10px;
+            padding: 0.25rem;
+          }
+        }
+
+        div[data-name='bottom-large'] {
+          display: none;
+        }
+
+        div[data-name='bottom-small'] {
+          display: block;
+
+          div[data-name='currentRow'] {
+            display: flex;
+            justify-content: space-between;
+
+            table {
+              margin-bottom: 0.5rem;
+            }
+          }
+
+          div[data-name='mappedRows'] {
+            width: 100%;
+
+            table {
+              margin: auto;
+              gap: 1rem;
+            }
+          }
+
+          p,
+          td,
+          th {
+            font-size: 10px;
+            padding: 5px;
+          }
+
+          td {
+            border-top: 1px solid lightgray;
+            border-bottom: 1px solid lightgray;
+          }
+
+          button {
+            border: none;
+            background-color: inherit;
+          }
+
+          svg {
+            width: 10px;
+            height: 10px;
+          }
+        }
+      }
+
+      div[data-component='table'] {
+        padding: 1rem;
+        width: 100%;
+        max-height: 75%;
+        overflow-y: auto;
+
+        p,
+        td,
+        th,
+        div,
+        input {
+          font-size: 10px;
+        }
+
+        svg {
+          width: 10px;
+          height: 10px;
+        }
+
+        input {
+          width: 30px;
+        }
+      }
+    }
+  }
+
+  section[data-component='modal-container-large'] {
+    div[data-component='modal'] {
+      div[data-component='modal-content'] {
+        div[data-component='modal'] {
+          div[data-component='modal-content'] {
+            max-height: 90%;
+            overflow-y: auto;
+
+            h2 {
+              font-size: 16px;
+              text-align: center;
+            }
+
+            p,
+            input {
+              font-size: 10px;
+            }
+
+            svg {
+              width: 10px;
+              height: 10px;
+            }
+
+            div[data-name='filters'] {
+              display: flex;
+              flex-direction: column;
+              margin-top: 1rem;
+
+              div[data-name='filter'] {
+                width: 80%;
+                margin-top: 1rem;
+                border: 1px solid lightgray;
+                border-radius: 5px;
+
+                button[data-component='filter-button'] {
+                  width: 100%;
+                  background-color: lightgray;
+                  display: flex;
+                  justify-content: space-between;
+                  border-radius: 0px;
+                  padding: 0.5rem 1rem;
+                  text-align: start;
+                }
+
+                div[data-component='filter-item'] {
+                  display: flex;
+                  flex-direction: column;
+                  max-height: 250px;
+
+                  div[data-component='filter-input'] {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding-bottom: 0.5rem;
+                    width: 100%;
+                    margin-top: 1rem;
+
+                    input {
+                      border-radius: 5px;
+                      padding-left: 1rem;
+                      max-width: 80%;
+                      min-width: 50%;
+                      margin-left: 0.5rem;
+                    }
+
+                    button {
+                      border: none;
+                      padding: 0.5rem;
+                      background-color: inherit;
+                      margin-right: 0.5rem;
+                      box-shadow: 0;
+                      filter: none;
+                    }
+                  }
+
+                  div[data-component='filter-option'] {
+                    display: flex;
+                    align-items: center;
+                    width: 80%;
+                    margin: auto;
+                    gap: 1rem;
+
+                    input {
+                      width: 10%;
+                    }
+
+                    p {
+                      max-width: 80%;
+                    }
+
+                    button {
+                      border: none;
+                    }
+                  }
+                }
+              }
+
+              .scroll {
+                overflow-y: scroll;
+              }
+
+              div[data-component='activated'] {
+                padding: 2rem;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  button[data-name='header-button'] {
+    padding: 0.5rem;
+  }
+
+  div[data-name='header-buttons-container'] {
+    gap: 0.5rem;
+  }
+
+  section[data-name='header'] {
+    display: none;
+  }
+
+  section[data-name='header-small'] {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 1rem 1rem 1rem;
+  }
+
+  div[data-name='logger-seperate'] {
+    display: block;
+    padding: 0 0 1rem 0;
+  }
+
+  div[data-name='logger'] {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+  max-width: 80vw;
+  margin: auto;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.1);
+
+  div[data-name='logger-content'] {
+    h2 {
+      font-weight: 700;
+      padding-bottom: 0.5rem;
+    }
+  }
+
+  button {
+    height: min-content;
+    width: min-content;
+    padding: 0.5rem;
+    background-color: inherit;
+    border: none;
+  }
+
+  button:hover {
+    color: red;
+  }
+}
 }
