--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -436,7 +436,6 @@ section[data-name='header'] {
   padding-left: 1rem;
 
   input[type="file"] {
-    border: 1px solid lightgray;
     border-radius: 5px;
     margin-right: 1em;
     height: 50px;
@@ -966,7 +965,7 @@ div[data-name='logger-seperate'] {
   }
 
   button[data-name='header-button'] {
-    padding: 1rem 0.5rem;
+    padding: 0.5rem 0.5rem 1rem 0.5rem;
   }
 
   div[data-name='header-buttons-container'] {
